@startuml bbiyong-erd
!pragma layout smetana
' 삐용(BBIYONG) 관제 서버 ERD
' 근거: BE_system/src/main/java/com/bbiyong/server/*/domain/*.java (JPA 엔티티 11개)
' 컬럼명은 Spring Boot 기본 네이밍(camelCase -> snake_case) 기준, 타입은 MySQL 8 매핑 기준
' 실선은 없다. 이 스키마에는 DB 외래키 제약이 없고, 점선은 애플리케이션이 id 값으로 참조하는 논리 관계다.

title 삐용 관제 서버 ERD (MySQL 8, JPA 엔티티 11개)

skinparam linetype ortho
skinparam shadowing false
skinparam defaultFontName "Apple SD Gothic Neo"
skinparam defaultFontSize 12
skinparam roundcorner 6
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #3B4A5A
  ArrowColor #6B7B8C
  HeaderBackgroundColor #E8EEF4
}
skinparam package {
  BorderColor #9AA8B6
  BackgroundColor #F7F9FB
  FontColor #3B4A5A
}
hide circle
hide methods

package "경보 · 영상" {
  entity "event_logs" as event_logs {
    * event_id : BIGINT <<PK, AUTO_INCREMENT>>
    --
    message_id : VARCHAR(64) <<UK>>
    * type : VARCHAR  [FIRE, OVERHEAT, SYSTEM]
    level : VARCHAR
    robot_id : VARCHAR
    equipment_id : VARCHAR
    map_id : VARCHAR(36)
    x : DOUBLE
    y : DOUBLE
    confidence : DOUBLE
    temperature : DOUBLE
    threshold : DOUBLE
    message : VARCHAR(1000)
    * timestamp : DATETIME(6)
    * status : VARCHAR  [UNRESOLVED, ACKNOWLEDGED, RESOLVED]
    * simulated : BIT
  }

  entity "video_clips" as video_clips {
    * id : VARCHAR(36) <<PK, UUID>>
    --
    * robot_id : VARCHAR
    event_id : BIGINT
    * clip_type : VARCHAR
    * storage_type : VARCHAR
    * file_path : VARCHAR(512)
    thumbnail_path : VARCHAR(512)
    duration_sec : INT
    file_size_bytes : BIGINT
    * started_at : DATETIME(6)
    ended_at : DATETIME(6)
    * created_at : DATETIME(6)
  }
}

package "인증 · 알림" {
  entity "users" as users {
    * id : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * email : VARCHAR <<UK>>
    * password_hash : VARCHAR
    * name : VARCHAR
    * role : VARCHAR  [ROLE_ADMIN, ROLE_USER]
    phone_number : VARCHAR(20)
    birth_date : DATE
    gender : VARCHAR(10)
    * created_at : DATETIME(6)
  }

  entity "notification_settings" as notification_settings {
    * id : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * user_id : VARCHAR  [값은 users.email]
    * mattermost_enabled : BIT
    mattermost_webhook_url : VARCHAR(500)
    mattermost_channel : VARCHAR(100)
    min_severity : VARCHAR(20)
    * created_at : DATETIME(6)
    updated_at : DATETIME(6)
  }

  entity "notification_deliveries" as notification_deliveries {
    * id : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * event_id : BIGINT <<UK1>>
    * recipient_user_id : VARCHAR <<UK1>>  [값은 users.email]
    * dedupe_key : VARCHAR(300)
    * status : VARCHAR(16)  [PENDING, SENT, FAILED]
    * attempts : INT
    * next_attempt_at : DATETIME(6)
    * created_at : DATETIME(6)
    last_error : VARCHAR(500)
  }
}

package "설비 · 지도" {
  entity "equipments" as equipments {
    * equipment_id : VARCHAR <<PK>>  [예: panel_A]
    --
    * name : VARCHAR
    x : DOUBLE
    y : DOUBLE
    threshold : DOUBLE
    last_temperature : DOUBLE
    last_inspected_at : DATETIME(6)
    * status : VARCHAR  [NORMAL, OVER, UNKNOWN]
  }

  entity "map_artifacts" as map_artifacts {
    * id : VARCHAR(36) <<PK, UUID>>
    --
    robot_id : VARCHAR
    * name : VARCHAR
    kind : VARCHAR  [RAW, FLOORPLAN]
    source_map_id : VARCHAR(36)
    * storage_type : VARCHAR
    * file_path : VARCHAR(512)
    width_px : INT
    height_px : INT
    resolution : DOUBLE
    origin_x : DOUBLE
    origin_y : DOUBLE
    origin_yaw : DOUBLE
    file_size_bytes : BIGINT
    active : BIT
    * created_at : DATETIME(6)
  }
}

package "순찰 · 로봇 상태 이력 (robot_id만 보유, 참조 없음)" {
  entity "waypoints" as waypoints {
    * id : VARCHAR(36) <<PK, UUID>>
    --
    robot_id : VARCHAR
    name : VARCHAR
    * x : DOUBLE
    * y : DOUBLE
    yaw : DOUBLE
    seq : INT
    * created_at : DATETIME(6)
  }

  entity "zones" as zones {
    * id : VARCHAR(36) <<PK, UUID>>
    --
    * name : VARCHAR(80)
    * x1 : DOUBLE
    * y1 : DOUBLE
    * x2 : DOUBLE
    * y2 : DOUBLE
    * created_at : DATETIME(6)
  }

  entity "patrol_schedules" as patrol_schedules {
    * schedule_id : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * name : VARCHAR
    * robot_id : VARCHAR
    * cron_expression : VARCHAR
    * enabled : BIT
    last_executed : DATETIME(6)
    created_at : DATETIME(6)
    updated_at : DATETIME(6)
  }

  entity "robot_health_history" as robot_health_history {
    * id : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * robot_id : VARCHAR <<IDX1>>
    * timestamp : DATETIME(6) <<IDX1>>
    battery : DOUBLE
    comm_latency_ms : INT
    inference_fps : DOUBLE
    status : VARCHAR
    estop : VARCHAR
    online : BIT
  }
}

' 배치 힌트 (보이지 않는 연결)
users -[hidden]right- event_logs
equipments -[hidden]down- waypoints
waypoints -[hidden]right- zones
zones -[hidden]right- patrol_schedules
patrol_schedules -[hidden]right- robot_health_history

' 논리 관계 (DB 외래키 없음)
event_logs ||..o{ video_clips : "event_id"
event_logs ||..o{ notification_deliveries : "event_id"
users ||..o{ notification_deliveries : "recipient_user_id\n= users.email"
users ||..o| notification_settings : "user_id\n= users.email"
equipments ||..o{ event_logs : "equipment_id"
map_artifacts ||..o{ event_logs : "map_id"
map_artifacts ||..o{ map_artifacts : "source_map_id"

legend right
  | 표기 | 의미 |
  | ● | NOT NULL |
  | PK / UUID | 기본키. UUID는 애플리케이션이 생성 |
  | UK | UNIQUE (UK1 = 두 컬럼 복합 UNIQUE) |
  | IDX1 | (robot_id, timestamp) 복합 인덱스 |
  | 점선 | 논리 참조. DB 외래키 제약 없음 |
  | robot_id | 로봇 테이블 없음. 실시간 상태는 메모리 캐시 |
endlegend

@enduml
